test/rails_app/app/views/validates/show.html.erb
<p id="notice"><%= notice %></p>

<h1>
  <b>Product:</b>
  <%= link_to @validate.product.codename, @validate.product %>
</h1>

<%= breadcrumb @validate %>

<p>
  <b>Standing test:</b>
  <%= @validate.standing_test %>
</p>

<p>
  <b>Sitting test:</b>
  <%= @validate.sitting_test %>
</p>

<p>
  <b>Fat guy test:</b>
  <%= @validate.fat_guy_test %>
</p>

<p>
  <b>Evel knievel jumping test:</b>
  <%= @validate.evel_knievel_jumping_test %>
</p>

<p>
  <b>Tester:</b>
  <%= @validate.tester %>
</p>


