test/rails_app/app/views/rejects/show.html.erb
<p id="notice"><%= notice %></p>

<h1>
  <b>Product:</b>
  <%= link_to @reject.product.codename, @reject.product %>
</h1>

<%= breadcrumb @reject %>

